# quant

./: README.md  README_TESTING.md  __init__.py  dev.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backtester/: __init__.py
backtester/cli/: __init__.py  runtime.py
backtester/core/: __init__.py  backtest_engine.py  config.py  config_diff.py  config_processor.py  event_bus.py  event_handlers.py  events.py  interfaces.py  logger.py  performance.py
backtester/data/: __init__.py  data_retrieval.py
backtester/execution/: __init__.py  broker.py  order.py
backtester/indicators/: __init__.py  atr.py  base_indicator.py  bollinger_bands.py  cci.py  config_loader.py  ema.py  factory.py  indicator_configs.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  williams_r.py
backtester/model/: __init__.py  base_model.py  model_configs.py  model_factory.py  sklearn_models.py
backtester/optmisation/: __init__.py  _optuna.py  base.py  objective.py  parameter_space.py  results.py  runner.py  study_manager.py
backtester/portfolio/: __init__.py  base_portfolio.py  dual_pool_portfolio.py  general_portfolio.py  pool_state.py  position.py
backtester/risk_management/: __init__.py  position_sizing.py  risk_control_manager.py  risk_limits.py  risk_metrics_calculator.py  risk_monitor.py  risk_profile.py  risk_signals.py  stop_loss.py  take_profit.py
backtester/signal/: signal_types.py
backtester/strategy/: __init__.py  factories.py
backtester/utils/: __init__.py  cache_utils.py  data_utils.py  db_manager.py  format_utils.py  math_utils.py  string_utils.py  time_utils.py  validation_utils.py
component_configs/: PLAN.md
component_configs/cli/: README.md  intraday_mean_reversion.yaml  momentum_daily.yaml
component_configs/core/: README.md  intraday_mean_reversion.yaml  momentum_daily.yaml
component_configs/data/: README.md  alpha_intraday.yaml  crypto_binance.yaml  yahoo_daily.yaml
component_configs/execution/: README.md  institutional.yaml  retail.yaml
component_configs/indicators/: README.md  atr_trailing.yaml  bollinger_wide.yaml  ema_fast.yaml  macd_default.yaml  rsi_momentum.yaml
component_configs/model/: README.md  pytorch_mlp.yaml  scipy_stats.yaml  sklearn_random_forest.yaml
component_configs/optmisation/: README.md  bayesian_tpe.yaml  grid_search.yaml
component_configs/portfolio/: README.md  defensive.yaml  dual_pool.yaml  general.yaml
component_configs/risk_management/: README.md  aggressive.yaml  balanced.yaml  conservative.yaml
component_configs/signal/: README.md  bullish_breakout.yaml  risk_off.yaml
component_configs/utils/: README.md  cache.yaml  logging.yaml
docs/: configuration.md  engine_workflow.md  observability.md  run_config_tutorial.md
examples/: train_example.py
integration_tests/: __init__.py  conftest.py  test_cli_end_to_end.py  test_config_processor_integration.py  test_data_indicator_signal_pipeline.py  test_data_retrieval_real.py  test_event_driven_engine.py  test_imports.py  test_kelly_workflow.py  test_model_strategy_integration.py  test_multi_strategy_orchestration.py  test_orchestration_multi_strategy.py  test_risk_breach.py  test_risk_management_integration.py  test_strategy_portfolio_broker_flow.py
integration_tests/plan/: README.md
misc/: health_check.py
scripts/: check_docs.py  fdpy_test.py  fmp_test.py  run_backtest.py  run_ci_checks.py
smoke_tests/: PLAN.md  __init__.py  conftest.py
smoke_tests/cli/: test_cli_presets.py
smoke_tests/core/: test_core_configs.py
smoke_tests/data/: test_data_configs.py
smoke_tests/execution/: test_execution_configs.py
smoke_tests/indicators/: test_indicator_configs.py
smoke_tests/model/: test_model_configs.py
smoke_tests/optmisation/: test_optimisation_configs.py
smoke_tests/portfolio/: test_portfolio_configs.py
smoke_tests/risk_management/: test_risk_configs.py
smoke_tests/signal/: test_signal_payloads.py
smoke_tests/strategy/: __init__.py
smoke_tests/utils/: test_utils_configs.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_example.py  test_fixtures.py  test_public_api.py  test_sample.py
tests/cli/: test_runtime.py
tests/core/: __init__.py  test_backtest_engine.py  test_config.py  test_config_diff.py  test_config_processor.py  test_engine_workflow.py  test_event_bus.py  test_event_handlers.py  test_events.py  test_logger.py  test_performance.py
tests/data/: __init__.py  test_data_retrieval.py
tests/execution/: __init__.py  test_broker.py  test_order.py
tests/indicators/: __init__.py  conftest.py  test_atr.py  test_base_indicator.py  test_bollinger_bands.py  test_cci.py  test_config_loader.py  test_ema.py  test_factory.py  test_macd.py  test_obv.py  test_rsi.py  test_sma.py  test_stochastic.py  test_williams_r.py
tests/integration/: stubs.py  (+4 more)
(+88 files in other folders)
